--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "react-router": "^6.23.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "rsuite": "^5.64.0",
+    "toastr": "^2.1.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
